Remove specific versions from requirements.txt
Updated package versions in requirements.txt to latest.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask==3.0.3
-tensorflow==2.16.1
-numpy==1.24.3
-Pillow==10.1.0
-gunicorn==21.2.0
-Werkzeug==3.0.1
+Flask
+tensorflow
+numpy
+Pillow
+gunicorn
+Werkzeug
